--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-gb'
-title = 'oscar sharpe'
+title = '0xSharpe'
 theme = 'typo'
 
 [taxonomies]
