--- a/hugo.toml
+++ b/hugo.toml
@@ -18,9 +18,9 @@ hideHeader = false
 # Intro on main page, content is markdown
 homeIntroTitle = 'woah'
 homeIntroContent = """
-Hi I'm Oscar, a 20 year old uni student from Southampton based in Leamington Spa - studying BSc Cyber Security at the University of Wariwck, currently working as a Security Research Intern @ CrowdStrike
+Hi I'm Oscar, a 20 year old uni student from Southampton based in Leamington Spa - studying BSc Cyber Security at the University of Wariwck, previous Security Research Intern @ CrowdStrike
 
-my small fountain of (limited) knowledge and photography
+my small fountain of (limited) knowledge and some of my photography
 """
 
 # Collection to display on home
@@ -36,13 +36,10 @@ listDateFormat = '2 Jan 2006'
 breadcrumbs = true
 
 # Social icons
-[[params.social]]
-name = "linkedin"
-url = "https://www.linkedin.com/in/oscar-sharpe-a68115253"
 
 [[params.social]]
 name = "email"
-url = "mailto:oscarsharpe@pm.me"
+url = "mailto:oscarsharpe@protonmail.com"
 
 [[params.social]]
 name = "github"
